# atlas

./: .env.example  .gitignore  CONTRIBUTING.md  LAUNCH-PLAYBOOK.md  LICENSE  LOOP_PROMPT.md  Makefile  NOTICE  PHASE-5-AND-BEYOND.md  README.md  SECURITY.md  TESTING.md  demo.sh  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  tester-bench.md  tester-ingest.md  tester-loop.md  tester-smoke.md  tester-stdio.md
.github/workflows/: cognitive-service.yml  gbrain-native.yml  hermes-native.yml  openclaw-native.yml  test.yml
atlas_core/: __init__.py  cli.py  graphiti.py
atlas_core/adapters/: __init__.py  claude_code.py  hermes.py  openclaw.py
atlas_core/api/: __init__.py  api_app.py  auth.py  events.py  grpc_handlers.py  grpc_server.py  http_server.py  mcp_server.py
atlas_core/daemon/: __init__.py  cycle.py  health.py
atlas_core/ingestion/: __init__.py  base.py  budget.py  claude_sessions.py  confidence.py  fireflies.py  imessage.py  limitless.py  materializer.py  meetings.py  orchestrator.py  screenpipe.py  vault.py
atlas_core/integrations/: __init__.py  intelligence_engine.py
atlas_core/lineage/: __init__.py  contradiction.py  extractor.py  (+1 more)
docs/: AGM_COMPLIANCE.md  INSTALL_MODES.md  LAUNCH_BACKLOG.md  PROPOSAL_VS_MUTATION.md  QUICKSTART.md  RUNTIME_ADAPTERS.md  WHY_VECTOR_IS_NOT_ENOUGH.md
laptop-setup/: README.md  install.sh
launch/: OVERNIGHT_PLAN.md  READY_FOR_MORNING.md  awesome_pr_drafts.md  dms.md  linkedin.md  newsletter_pitches.md  outreach.md  reddit_drafts.md  show_hn.md  show_hn_first_comment.md  x_thread.md  x_thread_FINAL.md
mcp-registry/: README.md  atlas.json
obsidian-plugin/: README.md  main.ts  manifest.json  package-lock.json  package.json
paper/: appendix-a-agm-compliance.md  atlas.md
scripts/: adjudicate.py  calibrate_confidence_thresholds.py  demo_loop.py  demo_messy.py  doctor.py  first_real_run.py  install_launchd.sh  install_qa_cron.sh  promote_backlog_to_issues.sh  push_to_github.sh  qa_site.py  replace_placeholder.sh  run_agm_compliance.py  run_bmb.py  run_full_matrix_with_keys.sh
site/: index.html  live-demo.html  live-real.html
(+205 files in other folders)
