[build-system]
requires = ["hatchling>=1.21.0"]
build-backend = "hatchling.build"

[project]
name = "atlas-core"
version = "0.1.0-alpha.1"
description = "Open-source local-first cognitive memory with AGM-compliant belief revision and automatic downstream reassessment (Ripple)"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10,<4"
authors = [
    { name = "Richard Schefren" },
]
keywords = [
    "cognitive-memory",
    "knowledge-graph",
    "agm",
    "belief-revision",
    "claude-code",
    "mcp",
    "neo4j",
    "agent-memory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "graphiti-core>=0.28.2",
    "anthropic>=0.49.0",
    "neo4j>=5.26.0",
    "pydantic>=2.0,<3",
    "python-ulid>=2.0",
    "tenacity>=8.0",
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "watchdog>=4.0",
    "sentence-transformers>=2.7",
]

[project.optional-dependencies]
benchmarks = [
    "mem0ai>=2.0.0",
    "letta",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "pytest-xdist>=3.5",
    "ruff>=0.4",
    "mypy>=1.10",
    "testcontainers[neo4j]>=4.0",
]
adapters = [
    # Hermes / OpenClaw integration deps installed only when needed
]

[project.urls]
Homepage = "https://github.com/richonly/atlas"
Documentation = "https://github.com/richonly/atlas/tree/main/docs"
Repository = "https://github.com/richonly/atlas"

[tool.hatch.build.targets.wheel]
packages = ["atlas_core"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires running Neo4j",
    "ripple: ripple algorithm tests",
    "adapters: agent-runtime adapter tests",
]
